用户管理模块接口+文档上传下载模块+langchain4j+rabbitmq+redis version: 0.80